--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py27, py34, py35, py36, flake8
+envlist = py34, py35, py36, py37, flake8
 
 [travis]
 python =
+    3.7: py37
     3.6: py36
     3.5: py35
     3.4: py34
-    2.7: py27
 
 [testenv:flake8]
 basepython = python
@@ -17,12 +17,12 @@ commands = flake8 codeowners
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+    pipenv
+
+; Install pip 18.0 to work around pipenv issue. https://github.com/pypa/pipenv/issues/2924
 commands =
-    pip install -U pip
-    py.test --basetemp={envtmpdir}
+    pipenv run pip install pip==18.0
+    pipenv install --dev --ignore-pipfile
+    pipenv run py.test -v
 
 
