Update to support running just one test.

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,6 @@ deps =
 commands =
     pipenv run pip install pip==18.0
     pipenv install --dev --ignore-pipfile
-    pipenv run py.test -v
+    pipenv run py.test -v {posargs}
 
 
